--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
 		"postinstall": "nuxt prepare"
 	},
 	"dependencies": {
+		"@ant-design-vue/nuxt": "^1.4.2",
+		"@pinia/nuxt": "^0.5.4",
+		"@vite-pwa/nuxt": "^0.10.1",
 		"nuxt": "^3.11.1",
+		"pinia": "^2.2.2",
 		"vue": "^3.4.21",
 		"vue-router": "^4.3.0"
 	}
