--- a/package.json
+++ b/package.json
@@ -17,5 +17,17 @@
 		"pinia": "^2.2.2",
 		"vue": "^3.4.21",
 		"vue-router": "^4.3.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.9.1",
+		"@typescript-eslint/eslint-plugin": "^8.3.0",
+		"@typescript-eslint/parser": "^8.3.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-define-config": "^2.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-unused-imports": "^4.1.3",
+		"eslint-plugin-vue": "^9.27.0",
+		"vue-eslint-parser": "^9.4.3"
 	}
 }
